# Refcount-LLVM

./: .gitignore  CMakeLists.txt  run_bc_parallel.py
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
analysis/: analysis-fieldvaluemap.py  analysis-refine-refop-field-and-save-into-files-with-index.py  analysis-refop-field.py  modify_compile_commands.py
include/: ClangRefcount.h  Dynamic_old.h  MultiThread.h  NewClangRefcount.h  NewRefcountMain.h  NewStatistics.h  RefcountLib.h  RefcountMain.h  RefcountNode.h  Statistics.h  Test.h
include/ClangRefcountFunc/: FuncArgsCompare.h
inputs/: input_for_cc_test.c  test.c  test.ll
lib/: CMakeLists.txt  ClangRefcount.cpp  Dynamic_old.cpp  NewClangRefcount.cpp  NewRefcountMain.cpp  Refcount.cpp  RefcountMain.cpp  StaticCallCounter.cpp  Test.cpp
lib/ClangRefcountFunc/: ClangRefcountFunc.cpp  FuncArgsCompare.cpp
tools/: AnalysisCNP.cpp  AnalysisLTO.cpp  CIDRefcountCollection.cpp  CMakeLists.txt  FindCNP.cpp  FindDupStruct.cpp  FindDupStructLocal.cpp  FindLLVMAnon.cpp  FindNestedStruct.cpp  FindRefcountOps.cpp  LLVMpassTest.cpp  MatcherTest.cpp  NewMain.cpp  main.cpp  main_old.cpp  main_old_old.cpp  main_test.cpp  refcount_count.cpp  refcount_count.cpp.old  refcount_count_old.cpp  refcount_main.cpp  refcount_recursive_check.cpp  refcount_select.cpp  refcount_struct_based_check.cpp  refcount_struct_based_check.cpp.old
work/: functest.c  gve.c  test-cur.c  test-cur.ll  test.bc  test.c  test.cpp  test.h  test.ll  test1.c  test1.ll  test2.c  test2.ll  test3.bc  test3.c  test3.ll  test4.c  test4.ll  union.c
